Fixed scrooling beyond page limits on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,14 @@
 html,
 body,
 #root {
+  position: absolute;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
+  overscroll-behavior: contain;
 }
 
 nav {
